# vacation-planner-crewai

./: .gitignore  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
agent/: .dockerignore  .env.example  Dockerfile  README.md  crew_kickoff.py  entrypoint.sh  invoke_payload.py  main.py  pyproject.toml
agent/crews/city_route/: README.md  crew.jsonc  models.py  pyproject.toml  run_with_phoenix.py  smoke_test.py
agent/crews/city_route/agents/: city_route_planner.jsonc  city_route_researcher.jsonc
agent/crews/day_plan/: README.md  crew.jsonc  day_models.py  pyproject.toml  run_with_phoenix.py  smoke_test.py
agent/crews/day_plan/agents/: day_plan_planner.jsonc  day_plan_researcher.jsonc  day_plan_reviewer.jsonc  itinerary_planner.jsonc  senior_vacation_researcher.jsonc
agent/crews/suggest_place/: README.md  crew.jsonc  pyproject.toml  suggest_models.py
agent/crews/suggest_place/agents/: suggest_place_composer.jsonc  suggest_place_researcher.jsonc
agent/evals/: README.md  __init__.py  __main__.py  case.py  harness.py  persist.py  preference_scorer.py  report.py  scorers.py  test_harness.py
agent/evals/fixtures/: day_plan_balance_food_forward.json  day_plan_balance_food_forward.output.json  day_plan_balance_food_only.json  day_plan_example_shape.json  day_plan_example_shape.output.json  day_plan_preference_exclusion.json  day_plan_preference_exclusion.output.json  day_plan_preference_food.json  day_plan_preference_food.output.json  day_plan_preference_mismatch.json  day_plan_preference_mismatch.output.json  suggest_place_example_shape.json  suggest_place_example_shape.output.json
agent/models/: README.md  __init__.py  pyproject.toml  trip.py
agent/models/vacation_planner_models/: __init__.py  keys.py  prompt_meta.py  quality.py  trip.py
agent/scripts/: build_push_image.sh
agent/tests/: test_models.py
backend/: README.md  docker-compose.yml  openapi.yaml  pyproject.toml
backend/scripts/: build_lambda.sh  create_local_table.py  local_api.py  smoke_trip_flow.py
backend/src/: auth.py  handler.py  http_utils.py  local_http.py  log_config.py
backend/src/agentcore/: client.py
backend/src/crews/: __init__.py  agentcore_runner.py  extract.py  fake_runner.py  local_runner.py  runner.py
backend/src/db/: client.py  dynamo_sanitize.py  keys.py  metrics_keys.py  place_keys.py  protocols.py  repository.py  safe_table.py  schema.py
backend/src/db/repository/: __init__.py  common.py  days.py  metrics.py  planning.py  profile.py  trips.py
backend/src/models/: __init__.py  api.py
backend/src/routes/: admin_metrics.py  events.py  places.py  profile.py  trips.py
backend/src/services/: bedrock_safety.py  crew_context_budget.py  crew_envelope.py  dates.py  day_balance.py  dedupe.py  energy.py  place_image_fallback.py  place_photo_cache.py  place_quality.py  places_client.py  places_enrich.py  plan_day_retry.py  plan_day_worker.py  profile_service.py  quality_policy.py  route_windows.py  safety.py  secrets.py  trip_service.py  worker_observability.py
backend/tests/: conftest.py  test_access_patterns.py  test_admin_metrics.py  test_agentcore_client.py  test_auth.py  test_crew_context_budget.py  test_crew_runner.py  test_dates.py  test_day_balance.py  test_day_plan_meals_and_gaps.py  test_dedupe.py  test_energy.py  test_handler_routing.py  test_http.py  test_keys.py  test_local_http.py  test_local_runner.py  test_metrics_repository.py  test_online_metrics_dual_write.py  test_openapi.py  test_place_image_fallback.py  test_place_photo_cache.py  test_place_quality.py  test_places_enrich.py  test_places_photo.py  test_plan_day_retry.py  test_plan_next_day_async.py  test_product_events.py  test_profile.py  test_quality_envelope.py  test_remove_place_and_day.py  test_route_windows.py  test_safety.py  test_secrets.py  test_strip_nones.py  test_trip_service.py  test_worker_observability.py
docs/: DATA_MODEL.md  ENVIRONMENT.md  PLANNING_QUALITY.md
docs/architecture-decisions/: 001-async-plan-next-day-polling.md  002-single-api-lambda.md  003-bff-agentcore-runtime-only.md  004-crew-quality-envelope.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: data-deletion.html  privacy.html
frontend/scripts/: deploy.sh
frontend/src/: App.create.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: http.test.ts  http.ts  metrics.test.ts  metrics.ts  places.ts  profile.ts  trips.test.ts  trips.ts
frontend/src/auth/: AuthBar.tsx  CallbackPage.tsx  LandingPage.tsx  config.ts  index.ts  oauth.test.ts  oauth.ts  pkce.ts  session.test.ts  session.ts
frontend/src/components/: CreateTripForm.tsx  DetailsStep.tsx  DevCrewModeSwitch.test.tsx  ProfileScreen.tsx  (+6 more)
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/agentcore/: main.tf  outputs.tf  variables.tf
infra/api/: dashboard.tf  main.tf  outputs.tf  variables.tf
infra/cognito/: main.tf  outputs.tf  variables.tf
infra/dynamodb/: main.tf  outputs.tf  variables.tf
infra/frontend/: main.tf  outputs.tf
infra/guardrails/: main.tf  outputs.tf
infra/observability/: README.md  main.tf  outputs.tf  variables.tf
infra/scripts/: check_api_http_methods.sh  sync_cognito_idps_from_secrets.sh  validate.sh
infra/secrets/: main.tf  outputs.tf  variables.tf
scripts/: dev.sh  install-git-hooks.sh
(+55 files in other folders)
