[project]
name = "vacation-planner-backend"
version = "0.1.0"
description = "Backend API Lambda for Vacation Planner"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
