[project]
name = "vacation-planner-backend"
version = "0.1.0"
description = "Backend API Lambda for Vacation Planner"
requires-python = ">=3.11,<3.14"
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "moto[dynamodb]>=5.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
