[project]
name = "vacation-planner-models"
version = "0.1.0"
description = "Shared Pydantic models for Vacation Planner crews and backend"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vacation_planner_models"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
