[project]
name = "vacation-planner-day-plan"
version = "0.1.0"
description = "Day-plan CrewAI crew for Vacation Planner"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,tools]>=1.15.4,<2.0.0",
    "arize-phoenix>=11.0.0",
    "openinference-instrumentation-crewai>=0.1.0",
    "opentelemetry-sdk>=1.31.0",
    "opentelemetry-exporter-otlp>=1.31.0",
    "python-dotenv>=1.0.0",
    "vacation-planner-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills", "models.py", "smoke_test.py"]

[tool.uv.sources]
vacation-planner-models = { path = "../../models", editable = true }

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
