[project]
name = "vacation-planner-suggest-place"
version = "0.1.0"
description = "Suggest-one-more-place CrewAI crew for Vacation Planner"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,tools]>=1.15.4,<2.0.0",
    "python-dotenv>=1.0.0",
    "vacation-planner-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "suggest_models.py"]

[tool.uv.sources]
vacation-planner-models = { path = "../../models", editable = true }

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
